        - removed timed_down and timed_guard functions - they were not being used
          anyways and should be replaced by a more generic mechanism - and were
          annoying to support anyways :
        - used new SLF interface to massively speed up Coro::Semaphore by a factor
          of three.
        - forgot to include Coro/libcoro/README in the dist for all these years.

4.913 Sat Nov 15 07:58:28 CET 2008
        - async_pool did free a scalar value twice
          ("Attempt to unreference...").

4.912 Thu Nov 13 18:31:23 CET 2008
	- minor cleanups.
        - use much larger stacks on linux and perl < 5.8.8.
        - Coro::Debug::new_unix_server did not unlink the socket
          when destroyed.

4.911 Tue Nov 11 04:26:17 CET 2008
	- "port" to threaded perls.

4.91 Mon Nov 10 05:36:38 CET 2008
        - the ->throw exception object no longer leaks.
        - creating a new cctx leaked a scopestack entry (memleak).
	- new coroutines didn't get created with a zero flags field
          (unknown impact).
	- calling ->throw on a not-yet-started coroutine should now work
          instead of being ignored.
        - ->throw is now supported on Coro::State objects.
        - clean up cctx creation code a bit.
        - entersub is actually a UNOP, not a LOGOP (not a bugfix).

4.9  Sat Nov  8 17:45:27 CET 2008
 	- (libcoro) did not preserve rbp with CORO_ASM (we are getting there).
        - (libcoro) no longer leak threads in the experimental pthread backend,
          also speed it up considerably.
        - (libcoro) do not rely on makecontext passing void *'s unscathed.
        - fix compiletime dependencies on libcoro in the Makefile.
        - cctx_count wasn't always updated properly.
        - Coro::State::cctx_stacksize wasn't applied correctly.
        - new function Coro::State::cctx_max_idle.
        - the default max number of idle C contexts is now 4.
        - (libcoro) try harder to get _setjmp/_longjmp.