@@ -31,6 +31,8 @@ TODO: maybe implement a default message channel, very much like Erlang's
         - used new SLF interface to massively speed up Coro::Semaphore by a factor
           of three.
         - forgot to include Coro/libcoro/README in the dist for all these years.
+        - work around a freebsd pthreads bug (manual testcancel is required as
+          pthread_cond_wait isn't a cancellation point on freebsd).
 
 4.913 Sat Nov 15 07:58:28 CET 2008
         - async_pool did free a scalar value twice
